Update files in platform/android to match what was upstreamed in

https://bugs.webkit.org/show_bug.cgi?id=31825
https://bugs.webkit.org/show_bug.cgi?id=31831